<resources>
    <string name="app_name">Help Me</string>

    <string name="homepage_button">HELP</string>

    <!--Permissions.java strings-->
    <string name="dialogbox_title">Permissions Explanation</string>
    <string name="dialogbox_positive">Yes</string>
    <string name="dialogbox_negative">No</string>
    <string name="location_permission">Location is needed to access and forward your/victim\'s location instantly</string>
    <string name="wifi_permission">Wifi is needed to forward your call wirelessly to nearby devices WITHOUT INTERNET</string>
    <string name="internet_permission">Internet access is needed to upload the event online to a broader audience</string>

    <string name="camera_permission">Adding pictures increase reliable and can help gain more response</string>
    <string name="files_write_permission">Write permission required save the picture taken to your device</string>
    <!--end-->

    <!--activity_post.xml-->
    <string name="description_hint">Write Short Description Here...</string>
    <string name="take_photo_button">Take Photo</string>
    <string name="photo_taken">Photo Taken</string>
    <string name="failed_photo_take">Failed! Take Photo Again</string>
    <string name="record_video_button">Record Video</string>
    <string name="pick_location_button">Pick location</string>

    <string name="post_button">Post</string>
    <string name="title_activity_maps">Map</string>

    <!--activity_post_posting.xml-->
    <string name="cancel_button">Stop</string>
    <string name="sign_up">"Don't have an account? Sign Up!</string>
    <string name="logout">Logout</string>
    <string name="phone_email">Phone or Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email_address">Phone or Email</string>
    <string name="already_have_account_log_in_here">Already have account? Log in here!</string>

    <!--MenuActivity-->
    <string name="l_w_title"></string>
    <string name="location_wifi_access">Please turn on both Location and WiFi to provide your precise location. Thank you.</string>
    <string name="location_wifi_ok">Ok</string>
    <string name="custom_location">pick cutom location</string>

    <!--MapsActivity-->
    <string name="confirm_dialog_msg">Send this location?</string>
    <string name="confirm_positive">Yes</string>
    <string name="confirm_negative">Select again</string>

    <!--Notification Channel-->
    <string name="channel_name">helpme notifications</string>
    <string name="channel_description">nearby + database notifications</string>
    <string name="type_a_comment">Type a comment...</string>
    <string name="send">Send</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>
