<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:gravity="center"
    tools:context="com.example.helpme.everything.RegistrationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginBottom="38dp"
                app:srcCompat="@drawable/signup" />

            <EditText
                android:id="@+id/email_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/editdesign"
                android:textCursorDrawable="@drawable/cursor"
                android:ems="10"
                android:textColor="#0F0F0F"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:hint="@string/email_address"
                android:textColorHint="@color/colorPrimaryDark"
                android:inputType="textPersonName"
                android:padding="12dp"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/pass_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/editdesign"
                android:ems="10"
                android:textColor="#0F0F0F"
                android:textCursorDrawable="@drawable/cursor"
                android:gravity="center"
                android:textColorHint="@color/colorPrimaryDark"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:fontFamily="@font/roboto"
                android:padding="12dp" />

            <Button
                android:id="@+id/signup_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="80dp"
                android:background="@drawable/button_login_signup"
                android:text="Sign Up"
                android:textSize="17sp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:padding="15dp"
                android:textColorHint="#644F49" />

            <TextView
                android:id="@+id/login_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/already_have_account_log_in_here"
                android:textAlignment="center"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/colorAccent" />


        </LinearLayout>
    </ScrollView>



</LinearLayout>